# zuno-app

./: .gitignore  README.md  deploy.sh  docker-compose.yml  package-lock.json  package.json
.gemini/: code-review-expert.md  docs-writer.md  onboarding-mentor.md
.github/workflows/: ci.yml  market-ci.yml
apps/api/: .env.example  .gitignore  Dockerfile  README.md  fly.toml  pom.xml
apps/api/src/main/resources/: application.properties
apps/market/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
apps/market/src/: main.py
apps/market/src/api/v1/: b3_dividends.py  b3_history.py  b3_news.py  b3_quote.py  crypto_quote.py
apps/market/src/services/: market_service.py
apps/market/tests/: conftest.py
apps/market/tests/api/v1/: test_b3_dividends.py  test_b3_history.py  test_b3_news.py  test_b3_quote.py
apps/market/tests/services/: test_market_service.py
apps/web/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/(protected)/: layout.tsx
apps/web/src/components/: app-sidebar.tsx  create-report-dialog.tsx  create-transaction-dialog.tsx  store-initializer.tsx
apps/web/src/components/ui/: accordion.tsx  badge.tsx
apps/web/src/resources/dividend/: dividend.service.ts  dividend.types.ts
apps/web/src/resources/market/: market.service.ts  market.types.ts
apps/web/src/resources/portfolio/: portfolio.service.ts  portfolio.types.ts
apps/web/src/stores/: user.store.ts
(+127 files in other folders)
